[TabStripContextMenus] Reorder test file into 3 distinct sections
This CL is a no-op. The goal is to move tests closer to their behavior.
This CL splits the test file into 3 sections

1. Tests that test the position in which the menu item is populated

2. Tests that test the behavior of the menu item This also includes any
tests that ensure certain menu items are not added, or tests that test
sub menus

3. Utility methods

Bug: 512805815
Change-Id: If5cc99198ceb76f3b39aa0f09d6ac7972dbfff82
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7842278
Auto-Submit: Hitarth Kothari <hitarthkothari@google.com>
Commit-Queue: Hitarth Kothari <hitarthkothari@google.com>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1630727}